crates/rulesteward-fapolicyd/tests/snapshots/fapd-F01__empty-object.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[fapd-F01] sev=Fatal line=1 col=22 span=21..21 :: found end of input expected ' ', '	', or attribute
