crates/rulesteward-fapolicyd/tests/snapshots/fapd-F01__empty-subject.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[fapd-F01] sev=Fatal line=1 col=17 span=16..17 :: malformed rule syntax: found ':' expected ' ', '	', or attribute
