crates/rulesteward-fapolicyd/tests/snapshots/fapd-F01__error-on-line-two.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[fapd-F01] sev=Fatal line=2 col=1 span=18..19 :: malformed rule syntax: found '!' expected ' ', '	', or decision keyword
