crates/rulesteward-fapolicyd/tests/snapshots/fapd-F01__missing-colon.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=err
diagnostics=1
[fapd-F01] sev=Fatal line=1 col=16 span=15..15 :: malformed rule syntax: found end of input expected ' ', '	', or colon separator
